# the-snake-and-the-turtle

./: .gitignore  CMakeLists.txt  EditorWidget.cpp  EditorWidget.hpp  Library.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ProjectHome.md  PythonBridge.cpp  PythonBridge.hpp  PythonHighlighter.cpp  Turtle.cpp  Turtle.hpp  turtle.pro
examples/: squaretest.py
examples/tdemo_byte_design/: tdemo_bytedesign_blue.py  tdemo_bytedesign_fast.py  tdemo_bytedesign_slow.py
examples/tdemo_clocks/: tdemo_clock_2.py  tdemo_clock_demo.py
examples/tdemo_elementary/: tdemo_peace_2.py  tdemo_radioactive.py  tdemo_teddy.py  tdemo_yinyang_circle.py  tdemo_yinyang_dot.py
examples/tdemo_fractals/: tdemo_fractalcurves.py  tdemo_recursive_squares.py  tdemo_sierpinski1.py  tdemo_sierpinski2.py
examples/tdemo_games/: button.py  tangram.py  tdemo_game_of_life.py  tdemo_game_of_life_coloured.py  tdemo_hanoi_animation.py  tdemo_moorhuhn.py  tdemo_scribble.py  tdemo_spaceship.py  tdemo_tangram.py
examples/tdemo_geometry/: tdemo_illusion_1.py  tdemo_illusion_2.py  tdemo_illusion_3.py  tdemo_illusion_4.py  tdemo_illusion_5.py  tdemo_nested_triangles.py  tdemo_trigeo.py
examples/tdemo_gravitation/: tdemo_doublestar.py  tdemo_graviturtle.py  tdemo_planet.py  tdemo_planet_with_moon.py  tdemo_planet_with_moon_2.py  tdemo_planets.py  tdemo_sun_and_inner_planets.py  tdemo_sun_earth.py  tdemo_sun_earth_moon.py
examples/tdemo_lindenmayer/: tdemo_indian_kolams.py  tdemo_twoPlants.py
examples/tdemo_mill/: tdemo_mill1.py  tdemo_mill2.py
examples/tdemo_penrose_tiling/: tdemo_animation.py  tdemo_penrose.py  tdemo_rhombi.py
examples/tdemo_python31_demo/: tdemo_I_dontlike_tiltdemo.py  tdemo_bytedesign.py  tdemo_chaos.py  tdemo_clock.py  tdemo_colormixer.py  tdemo_forest.py  tdemo_fractalcurves.py  tdemo_lindenmayer_indian.py  tdemo_minimal_hanoi.py  tdemo_nim.py  tdemo_paint.py  tdemo_peace.py  tdemo_penrose.py  tdemo_planet_and_moon.py  tdemo_round_dance.py  tdemo_tree.py  tdemo_wikipedia.py  tdemo_yinyang.py
examples/tdemo_trees/: tdemo_2rtrees_generators.py  tdemo_another_forest.py  tdemo_itree.py  tdemo_rtree1.py  tdemo_rtree2_generator.py
examples/tdemo_wikipedia_example/: tdemo_wikipedia1.py  tdemo_wikipedia2.py  tdemo_wikipedia3.py  tdemo_wikipedia3_how2.py  tdemo_wikipedia4.py
gui/: CMakeLists.txt  Directories.cpp  Directories.hpp  EditorWidget.cpp  EditorWidget.hpp  Emb.cpp  Emb.hpp  Library.cpp  Library.hpp  LibraryBrowser.cpp  LibraryBrowser.hpp  LibraryBrowser.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PythonBridge.cpp  PythonBridge.hpp  PythonHighlighter.cpp  PythonHighlighter.hpp  Synchronizer.cpp  Synchronizer.hpp  gui.pro  main.cpp
qturtle/: CMakeLists.txt  Module.cpp  Module.hpp  Screen.hpp  globalFunctions.cpp  qturtle.pro  qturtle_global.cpp  qturtle_global.hpp
turtleModuleLib/: CMakeLists.txt  GlobalFunctions.cpp  GlobalFunctions.hpp  Module.cpp  Module.hpp  NamedColors.cpp  NamedColors.hpp  Screen.cpp  Screen.hpp  ScreenFunctions.cpp  ScreenFunctions.hpp  Turtle.cpp  Turtle.hpp  TurtleFunctions.cpp  TurtleFunctions.hpp  TurtleScreen.cpp  TurtleScreen.hpp  globalFunctions.hpp  qturtle_global.cpp
